Prevent tap highlight on mobile (Safari)

--- a/style.css
+++ b/style.css
@@ -19,3 +19,7 @@
         transform: translateZ(-50px) scale(1.5);
     }
 }
+
+button, a {
+    -webkit-tap-highlight-color: transparent;
+}
